<?xml version="1.0"?>
<package format="2">
  <name>youbot_interface</name>
  <version>0.0.0</version>
  <description>The youbot_interface package</description>

  <maintainer email="arjun@todo.todo">arjun</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <export>

  </export>
</package>
